# SentinelForge

./: .gitignore  CODE_OF_CONDUCT.md  DISCLAIMER.md  GITHUB_PUBLISH_CHECKLIST.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  convert_osv_advisories.py  main.py  pyproject.toml  requirements.txt
agents/bash/: deploy_honeypot.sh  local_audit.sh
agents/powershell/: Get-FailedLogons.ps1  Invoke-LocalAudit.ps1
data/: config.example.json
sentinelforge/: __init__.py  cli.py
sentinelforge/core/: config.py  db.py  events.py  jobs.py  net.py  text.py
sentinelforge/core/storage/: __init__.py  assets.py  connection.py  dashboard.py  honeypot.py  recon.py  scanner.py  vulnerabilities.py
sentinelforge/modules/: doctor.py  stress.py
sentinelforge/modules/analysis/: __init__.py  attack_paths.py  evidence_graph.py  honeypot_campaigns.py  source_quality.py
sentinelforge/modules/honeypot/: __init__.py  alert.py  enrichment.py  exporter.py  personas.py  server.py
sentinelforge/modules/recon/: __init__.py  diff.py  dns_records.py  exporter.py  exposure.py  runner.py  subdomains.py  takeover.py  techstack.py  whois_rdap.py
sentinelforge/modules/reports/: __init__.py  exporter.py
sentinelforge/modules/scanner/: __init__.py  cve_db.json  cve_match.py  delta.py  discovery.py  fingerprint.py  inventory.py  (+9 more)
sentinelforge/ui/: dashboard_service.py  shell.py  theme.py
tests/: conftest.py  test_attack_paths.py  test_cli.py  test_dashboard.py  test_scanner_logic_regressions.py  test_scanner_web_detection.py  test_vuln_sync_freshness.py  test_vulnerability_correlation.py
(+20 files in other folders)
