[project]
name = "sentinelforge"
version = "0.1.0"
description = "Local security scanning, recon, honeypot, and reporting toolkit."
requires-python = ">=3.11,<3.14"
dependencies = [
  "flet[desktop]>=0.85.3,<0.86",
  "dnspython>=2.8.0,<3",
  "httpx>=0.28.1,<0.29",
]

[project.scripts]
sentinelforge = "sentinelforge.cli:main"
sentinelforge-ui = "sentinelforge.ui.shell:run"

[project.optional-dependencies]
packet = [
  "scapy>=2.6.1,<3",
  "pyshark>=0.6,<0.7",
]
dev = [
  "pytest>=9.0.2,<10",
  "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
